break lines in code example prevent page overflow-x

--- a/source/assets/stylesheets/docs/_base.sass
+++ b/source/assets/stylesheets/docs/_base.sass
@@ -599,6 +599,9 @@ p code
   .code
     padding: 10px 15px
 
+  pre
+    white-space: pre-wrap
+
 @media (max-width: 480px)
 
   .doc-menu-top
